UN-1198 gift-for-review page template created

--- a/sections/gift-for-review.liquid
+++ b/sections/gift-for-review.liquid
@@ -1,9 +1,8 @@
 <div class="page-width">
-    <div class="section-header text-center">
+    <div class="section-header">
         <h1>{{ section.settings.header }}</h1>
         <p>{{ section.settings.subheader }}</p>
     </div>
-    <div class="rte">
         <div class="simple_steps">
             <div class="simple_steps-wrapper">
                 <div class="simple_item simple_item-first">
@@ -45,7 +44,6 @@
                 </div>
             </div>
         </div>
-    </div>
 </div>
 
 
