--- a/sections/gift-for-review.liquid
+++ b/sections/gift-for-review.liquid
@@ -49,7 +49,21 @@
 
 
 <style>
-
+    section#shopify-section-gift-for-review {
+        font-family: 'Poppins';
+    }
+    .section-header h1 {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 48px;
+        line-height: 150%;
+    }
+    .section-header p {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 150%;
+    }
     .simple_steps-wrapper {
         display: flex;
         justify-content: space-between;
@@ -61,13 +75,13 @@
         flex-direction: column;
     }
     .simple_item-first {
-        flex: 0 1 25%;
+        flex: 0 1 33%;
     }
     .simple_item-second {
-        flex: 0 1 35%;
+        flex: 0 1 33%;
     }
     .simple_item-third {
-        flex: 0 1 25%;
+        flex: 0 1 33%;
     }
     .simple_item-content p {
         font-weight: 500;
@@ -86,6 +100,7 @@
         object-fit: contain;
     }
     .simple_item-list ul {
+        padding-top: 10px;
         list-style: none;
         columns: 2;
     }
@@ -143,6 +158,12 @@
         }
     }
     @media (max-width: 767px) {
+        .section-header h1 {
+            font-size: 24px;
+        }
+        .section-header p {
+            font-size: 18px;
+        }
         .simple_item {
             justify-content: flex-start;
             margin-bottom: 24px;
