--- a/snippets/product-card-grid.liquid
+++ b/snippets/product-card-grid.liquid
@@ -136,7 +136,9 @@
     </div>
     
     {%- endunless -%}
-    
+    <div class="ab-test">
+      <div product-id="{{ product.id }}" class="arv-collection arv-collection--{{ product.id }}"></div>
+  </div>
 	<div class="subheading grid-view-item__title medium-up--hide ">
       {%- if section.settings.on_mobile_title_set == "mobile_title_set_line_trim" -%}
       {%- assign setHlimit = section.settings.mobile_text_limit -%}
