Rating on collection page

--- a/snippets/alireviews_core.liquid
+++ b/snippets/alireviews_core.liquid
@@ -1,5 +1,5 @@
 {% assign template_support = "product" %}
-{% if template_support contains request.page_type %}
+{% if request.page_type contains 'product' or request.page_type contains 'collection'%}
  
  
         <script>
