--- a/sections/collection-dino-template.liquid
+++ b/sections/collection-dino-template.liquid
@@ -352,6 +352,9 @@
         {%- assign is_empty_collection = true -%}
         {% endif %}
         {% endfor %}
+        <div class="grid__item grid__item--{{section.id}} {{ grid_item_width }} {{grid_mobile}}">
+          {% include 'product-card-grid', product:all_products['set-for-mounting-puzzles'], max_height: max_height %}
+      </div>
       </div>
       {% comment %}
       {% if section.settings.layout == 'grid' %}
@@ -580,6 +583,9 @@
         {%- assign is_empty_collection = true -%}
         {% endif %}
         {% endfor %}
+        <div class="grid__item grid__item--{{section.id}} {{ grid_item_width }} {{grid_mobile}}">
+          {% include 'product-card-grid', product:all_products['set-for-mounting-puzzles'], max_height: max_height %}
+      </div>
       </div>
       {% comment %}
       {% if section.settings.layout == 'grid' %}
