--- a/sections/product-template-default.liquid
+++ b/sections/product-template-default.liquid
@@ -601,7 +601,7 @@
                       {% endif %}
                     </span>
                   {% else %}
-                    <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span> <span class="from-ab-test" style="display:none;">from </span><span class="from-ab-test" style="display:none;">from </span>
+                    <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span> <span class="from-ab-test" style="display:none;">from </span>
                     <s id="ComparePrice-{{ section.id }}" class="hide">{{ current_variant.compare_at_price | money }}</s>
                     <span class="product-price__price product-price__price-{{ section.id }}">
                       <span id="ProductPrice-{{ section.id }}" itemprop="price" content="{{ current_variant.price | times: discount_amount | divided_by: 100.00 }}">
