--- a/snippets/mobile-etc-button.liquid
+++ b/snippets/mobile-etc-button.liquid
@@ -98,7 +98,7 @@
       {%- endfor -%}
     </div>
     {%comment%}<div style="text-align: center;"><img src="{{ product.featured_image.src | img_url: '160x' }}"/></div>{%endcomment%}
-    <button id="mobile-sticky-atc" class="btn_sp">Add to card <span class="button-price"></span></button>
+    <button id="mobile-sticky-atc" class="btn_sp">Add to cart <span class="button-price"></span></button>
 </div>
 <script>
     if (screen.width < 425) {
