UN-1237  Исправить размеры на кнпке add to cart

--- a/snippets/add-to-card.liquid
+++ b/snippets/add-to-card.liquid
@@ -5,7 +5,8 @@
           {% if variant.available %}
               <div class="add-to-card-size__item">
                   <input type="radio" class="custom-checkbox" id="atc-button-{{size_selector[forloop.index]}}" name="atc-size-selector" price="{{variant.price | money}}" value="{{variant.id}}">
-                  <label for="{{variant.id}}">{{size_selector[forloop.index]}}</label>
+                  {%- assign label = variant.sku | split: ' ' | last -%}
+                  <label for="{{variant.id}}">{{ label }}</label>
               </div>
           {%- endif -%}
       {%- endfor -%}
