--- a/sections/page-landing.liquid
+++ b/sections/page-landing.liquid
@@ -5,6 +5,50 @@
         </div>
     </header>
     <main class="page__content">
+        <section class="collection" id="new">
+            <div class="collection__container">
+                <div class="collection__headline">
+                    <h2 class="title collection__title">New</h2><a class="collection__view-all" href="{{ section.settings.vew_all_new_items }}">View all new items</a>
+                </div>
+                <div class="collection__items">
+                    {%- assign ProductsNew = section.blocks | where: "type", "ProductsNew" -%}
+                    {%- if ProductsNew.size > 0 -%}
+                        {%- for block in ProductsNew -%}
+                            <div class="c-product collection__item">
+                                <div class="c-product__main">
+                                    <div class="c-product__image"><img src="{{block.settings.landing_new_product.featured_image | img_url: 'master' }}" width="360" height="360" alt="Fiery Fox" /></div>
+                                    <div class="c-product__info">
+                                        <div product-id="{{block.settings.landing_new_product.id }}" class="arv-collection arv-collection--{{ block.settings.landing_new_product.id }}"></div>
+                                        <div class="alrv-prod-rating"><span class="alr-wrapper-rating"></span></div>
+                                    </div>
+                                    <div class="c-product__title">{{ block.settings.landing_new_product.title }}</div>
+                                </div>
+                                <div class="c-product__bottom">
+                                    <div class="c-product__price"><span class="c-product__from">from</span> {{ block.settings.landing_new_product.price | money }}</div><a class="button c-product__button" href="{{ block.settings.landing_new_product.url }}" role="button">Shop now</a>
+                                </div>
+                            </div>
+                        {%- endfor -%}
+                    {%- else -%}
+                        {%- assign new_products = collections.all.products | sort: 'published_at' | reverse -%}
+                        {%- for product in new_products limit:3 -%}
+                            <div class="c-product collection__item">
+                                <div class="c-product__main">
+                                    <div class="c-product__image"><img src="{{ product.featured_image | img_url: 'master' }}" width="360" height="360" alt="Fiery Fox" /></div>
+                                    <div class="c-product__info">
+                                        <div product-id="{{ product.id }}" class="arv-collection arv-collection--{{ product.id }}"></div>
+                                        <div class="alrv-prod-rating"><span class="alr-wrapper-rating"></span></div>
+                                    </div>
+                                    <div class="c-product__title">{{ product.title }}</div>
+                                </div>
+                                <div class="c-product__bottom">
+                                    <div class="c-product__price"><span class="c-product__from">from</span> {{ product.price | money }}</div><a class="button c-product__button" href="{{ product.url }}" role="button">Shop now</a>
+                                </div>
+                            </div>
+                        {%- endfor -%}
+                    {%- endif -%}
+                </div>
+            </div><img class="collection__leaves-1" src="{{ 'landing-leaves-1.svg' | asset_url }}" width="272" height="380" alt="" /><img class="collection__figure-1" src="{{ 'landing-figure-1.png' | asset_url }}" srcset="{{ 'landing-figure-1.png' | asset_url }} 1x, {{ 'landing-figure-1@2x.png' | asset_url }} 2x" width="253" height="296" alt="" /><img class="collection__leaves-2" src="{{ 'landing-leaves-2.svg' | asset_url }}" width="260" height="246" alt="" /><img class="collection__figure-2" src="{{ 'landing-figure-2.png' | asset_url }}" srcset="{{ 'landing-figure-2.png' | asset_url }} 1x, {{ 'landing-figure-2@2x.png' | asset_url }} 2x" width="73" height="211" alt="" /><img class="collection__leaves-5" src="{{ 'landing-leaves-5.svg' | asset_url }}" width="65" height="117" alt="" />
+        </section>
         <section class="advantages" id="advantages">
             <div class="advantages__container">
                 <div class="advantages__row">
@@ -42,30 +86,6 @@
                 </div>
             </div>
         </section>
-        <section class="collection" id="new">
-            <div class="collection__container">
-                <div class="collection__headline">
-                    <h2 class="title collection__title">New</h2><a class="collection__view-all" href="{{ section.settings.vew_all_new_items }}">View all new items</a>
-                </div>
-                <div class="collection__items">
-                    {%- assign ProductsNew = section.blocks | where: "type", "ProductsNew" -%}
-                    {%- for block in ProductsNew -%}
-                        <div class="c-product collection__item">
-                            <div class="c-product__main">
-                                <div class="c-product__image"><img src="{{ block.settings.landing_new_product.featured_image | img_url: 'master' }}" width="360" height="360" alt="Fiery Fox" /></div>
-                                <div class="c-product__info">
-                                    <div class="stars c-product__stars" title="5"><span class="stars__rating" style="width:100%"></span></div><span class="c-product__rating">{{ block.settings.rating }}</span><span class="c-product__reviews">({{ block.settings.reviews }})</span>
-                                </div>
-                                <div class="c-product__title">{{ block.settings.landing_new_product.title }}</div>
-                            </div>
-                            <div class="c-product__bottom">
-                                <div class="c-product__price"><span class="c-product__from">from</span> {{ block.settings.landing_new_product.price | money }}</div><a class="button c-product__button" href="{{ block.settings.landing_new_product.url }}" role="button">Shop now</a>
-                            </div>
-                        </div>
-                    {%- endfor -%}
-                </div>
-            </div><img class="collection__leaves-1" src="{{ 'landing-leaves-1.svg' | asset_url }}" width="272" height="380" alt="" /><img class="collection__figure-1" src="{{ 'landing-figure-1.png' | asset_url }}" srcset="{{ 'landing-figure-1.png' | asset_url }} 1x, {{ 'landing-figure-1@2x.png' | asset_url }} 2x" width="253" height="296" alt="" /><img class="collection__leaves-2" src="{{ 'landing-leaves-2.svg' | asset_url }}" width="260" height="246" alt="" /><img class="collection__figure-2" src="{{ 'landing-figure-2.png' | asset_url }}" srcset="{{ 'landing-figure-2.png' | asset_url }} 1x, {{ 'landing-figure-2@2x.png' | asset_url }} 2x" width="73" height="211" alt="" /><img class="collection__leaves-5" src="{{ 'landing-leaves-5.svg' | asset_url }}" width="65" height="117" alt="" />
-        </section>
         <div class="collection" id="hits">
             <div class="collection__container">
                 <div class="collection__headline">
@@ -78,7 +98,8 @@
                             <div class="c-product__main">
                                 <div class="c-product__image"><img src="{{ block.settings.landing_best_product.featured_image | img_url: 'master' }}" width="360" height="360" alt="Fiery Fox" /></div>
                                 <div class="c-product__info">
-                                    <div class="stars c-product__stars" title="5"><span class="stars__rating" style="width:100%"></span></div><span class="c-product__rating">{{ block.settings.rating }}</span><span class="c-product__reviews">({{ block.settings.reviews }})</span>
+                                    <div product-id="{{ block.settings.landing_best_product.id }}" class="arv-collection arv-collection--{{ block.settings.landing_best_product.id }}"></div>
+                                    <div class="alrv-prod-rating"><span class="alr-wrapper-rating"></span></div>
                                 </div>
                                 <div class="c-product__title">{{ block.settings.landing_best_product.title }}</div>
                             </div>
@@ -133,6 +154,50 @@
 {
     "name": "Landing page",
     "settings": [
+    {
+        "type": "header",
+        "content": "Rating Settings"
+    },
+    {
+        "type": "range",
+        "id": "star_size",
+        "min": 10,
+        "max": 30,
+        "step": 1,
+        "unit": "px",
+        "label": "Star Size",
+        "default": 17
+    },
+    {
+        "type": "range",
+        "id": "star_text_font_size",
+        "min": 10,
+        "max": 30,
+        "step": 1,
+        "unit": "px",
+        "label": "Star Text Font Size",
+        "default": 16
+    },
+    {
+        "type": "range",
+        "id": "star_padding",
+        "min": 0,
+        "max": 30,
+        "step": 1,
+        "unit": "px",
+        "label": "Star paddings",
+        "default": 3
+    },
+    {
+        "type": "range",
+        "id": "star_text_padding",
+        "min": 0,
+        "max": 30,
+        "step": 1,
+        "unit": "px",
+        "label": "Star Text paddings",
+        "default": 10
+    },
     {
         "type": "header",
         "content": "Header"
@@ -233,18 +298,6 @@
                 "type": "product",
                 "id": "landing_new_product",
                 "label": "Product for section"
-            },
-            {
-                "type": "text",
-                "id": "rating",
-                "label": "Rating",
-                "default": "5.0"
-            },
-            {
-                "type": "text",
-                "id": "reviews",
-                "label": "Reviews count",
-                "default": "100 reviews"
             }
         ]
     },
@@ -256,18 +309,6 @@
                 "type": "product",
                 "id": "landing_best_product",
                 "label": "Product for section"
-            },
-            {
-                "type": "text",
-                "id": "rating",
-                "label": "Rating",
-                "default": "5.0"
-            },
-            {
-                "type": "text",
-                "id": "reviews",
-                "label": "Reviews count",
-                "default": "100 reviews"
             }
         ]
     },
@@ -295,3 +336,16 @@
   ]
 }
 {% endschema %}
+
+<style>
+    .arv-collection .alr-icon-star:before, #alireview-review-widget-badge .alr-icon-star:before {
+        font-size: {{ section.settings.star_size }}px;
+    }
+    .arv-collection .alr-wrapper-rating .alr-rating-symbol:not(:last-child) {
+        margin-right: {{section.settings.star_padding}}px!important;
+    }
+    span.alrv-prod-rating__text {
+        padding-left: {{section.settings.star_text_padding}}px;
+        font-size: {{ section.settings.star_text_font_size }}px;
+    }
+</style>
