--- a/sections/page-landing.liquid
+++ b/sections/page-landing.liquid
@@ -153,7 +153,7 @@
     function setCookie(name, value, options = {}) {
 
         options = {
-        path: '/pages/landing',
+        path: '/',
         ...options
         };
 
@@ -174,7 +174,7 @@
         document.cookie = updatedCookie;
         }
 
-        setCookie('landing_page', true, {secure: true, 'max-age': 3600});
+        setCookie('landing_page_visit', true, {secure: true, 'max-age': 3600});
 </script>
 {% schema %}
 {
