--- a/snippets/alireviews_core.liquid
+++ b/snippets/alireviews_core.liquid
@@ -1,4 +1,4 @@
-{%- assign template_support = "product" -%}
+{% assign template_support = "product" %}
 {%- if request.page_type contains 'product' or request.page_type contains 'collection' or request.path contains '/pages/landing' -%}
  
  
