Migration to 2.0 + back in stock setUp configuration

--- a/sections/product-subscription-template.liquid
+++ b/sections/product-subscription-template.liquid
@@ -590,6 +590,13 @@
             "label": "Show Cart Drawer",
             "default": false
         },
+        {
+          "type":"checkbox",
+          "label":"Enable back in stock service",
+          "id":"enable_back_in_stock",
+          "info":"Enable a pop-up notification in out of stock a RS size with an offer to buy other puzzles in this size",
+          "default": false
+        },
         { 
           "type": "checkbox",
             "id": "show_saved_amount",
