--- a/sections/product-template-default-2.liquid
+++ b/sections/product-template-default-2.liquid
@@ -713,7 +713,11 @@
                 
                 {% endform %}
     
-                {%- render 'back-in-stock-form', product_id: product.id, product_variants_id: current_variant.id -%}
+                            {%-liquid
+              if enable_back_in_stock
+                render 'back-in-stock-form', product_id: product.id, product_variants_id: current_variant.id
+              endif
+            -%}
     
                 {% if section.settings.enable_sticky %}
                 <style>
